# stp_y1_SeqKit

./: README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
SeqKit_tools/: logger.py  main.py
SeqKit_tools/modules/: blocking.py  square_hypotenuse.py  sum_of_odds.py  transcriber.py  two_slices.py
tests/: test_blocking.py  test_square_hypotenuse.py  test_sum_of_odds.py  test_transcriber.py  test_two_slices.py
